--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
 }
 
 * {
@@ -239,3 +238,62 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+@media only screen and (max-width: 768px) {
+
+.navbar{
+  float:right;
+  margin:0;
+}
+
+nav{
+  width: 50%;
+  float:right;
+  margin:0;
+}
+
+.sidebar{
+  float:left;
+  max-width: 100%;
+}
+
+.auth-image{
+  float:left;
+  clear:right;
+}
+
+
+
+@media only screen and (max-width: 640px) {
+  #logo {
+    width: 100%;
+  }
+
+  .auth-image{
+    width:100%;
+    height:100%;
+    margin-bottom:10px;
+  }
+    .sidebar {
+        max-width:650px;
+    }
+  .navbar{
+    float:left;
+    width: 100%;
+  }
+
+  nav-a {
+    padding:0;
+  }
+
+  nav{
+    float: none;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+
+
+
+
